--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "debug",
             "cwd": "${workspaceFolder}",
             "program": "${workspaceFolder}",
-            "args": ["-wlcm", "sample.txt", "-"],
+            "args": ["-wlcm", "sample_texts/test.txt"],
             "console": "integratedTerminal",
         }
     ]
